# rust-api-gateway-template

./: Cargo.toml  README.md
src/: api.rs  config.rs  lib.rs  main.rs
src/api/: openapi.rs  router.rs
src/api/routes/: health.rs
